@@ -24,4 +24,18 @@ WriteMakefile(
         : ()
     ),
 
+    ($mm_ver <= 6.45
+        ? ()
+        : (META_MERGE => {
+            'meta-spec' => { version => 2 },
+            resources => {
+                repository  => {
+                    type => 'git',
+                    web  => 'https://github.com/dsully/perl-ogg-vorbis-header-pureperl',
+                    url  => 'https://github.com/dsully/perl-ogg-vorbis-header-pureperl.git',
+                },
+            },
+          })
+    ),
+
 );
